Novas views e controller caixas
Implementação das views de configuração e controller do CRUD Caixas

--- a/src/main/resources/templates/menu-area-logada.html
+++ b/src/main/resources/templates/menu-area-logada.html
@@ -5,14 +5,18 @@
 </header>
 <nav>
 	<ul>
-		<li><a href="logada_intro.html"> Investimentos </a></li>
+		<li><a href="interno"> Investimentos </a></li>
 		<li>Orçamento</li>
 	</ul>
 </nav>
 <section id="controles">
-	<a href="index.html"> <img src="_imagens/icones/fechar.svg"
-		class="img-fluid" alt="Renda fixa">
-	</a> <img src="_imagens/icones/ajuda.svg" class="img-fluid"
-		alt="Renda fixa"> <img src="_imagens/icones/configurar.svg"
-		class="img-fluid" alt="Renda fixa">
+
+	<a href="index"> 
+		<img src="_imagens/icones/fechar.svg" class="img-fluid" alt="Fechar">
+	</a> 
+		<img src="_imagens/icones/ajuda.svg" class="img-fluid"
+		alt="Ajuda"> 
+	<a href="/config"> 	
+		<img src="_imagens/icones/configurar.svg" class="img-fluid" alt="Configurações">
+	</a> 	
 </section>
