--- a/src/main/resources/templates/configuracoes/configuracoes.html
+++ b/src/main/resources/templates/configuracoes/configuracoes.html
@@ -18,7 +18,7 @@
 				    <h5 class="card-title">Caixas</h5>
 				    <h6 class="card-subtitle mb-2 text-muted">Tipos de alocação</h6>
 				    <p class="card-text">Configurar as caixas de investimento, incluindo o percentual de alocação teórica</p>
-				    <a href="/config/caixas" class="card-link">Configurar</a>
+				    <a href="/config-caixas" class="card-link">Configurar</a>
 				  </div>
 				</div>
         
