--- a/src/main/resources/templates/menu-area-logada.html
+++ b/src/main/resources/templates/menu-area-logada.html
@@ -11,7 +11,7 @@
 </nav>
 <section id="controles">
 
-	<a href="index"> 
+	<a href="/"> 
 		<img src="_imagens/icones/fechar.svg" class="img-fluid" alt="Fechar">
 	</a> 
 		<img src="_imagens/icones/ajuda.svg" class="img-fluid"
