--- a/src/main/resources/templates/sobre.html
+++ b/src/main/resources/templates/sobre.html
@@ -1,26 +1,8 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-br" xmlns:th="http://thymeleaf.org"
+	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <!--fontes √°rea -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@600&family=Spartan&display=swap"
-        rel="stylesheet">
-
-    <!--css √°rea -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
-    <link rel="stylesheet" href="_CSS/estilo.css">
-    <link rel="stylesheet" href="_CSS/gridPublico.css">
-
-
-    <title>Better Glauco</title>
-</head>
+<th:block th:include="header"></th:block>
 
 <body class="interfacePublic">
     <header id="headerInicial">
@@ -30,29 +12,29 @@
     <nav id="menuSuperior">
         <ul>
             <li>
-                <a href="sobre.html">
+                <a href="sobre">
                     Quem somos
                 </a>
             </li>
             <li>
-                <a href="logada_intro.html">
+                <a href="/">
                     Entrar
                 </a>
             </li>
             <li>
-                <a href="contato.html">
+                <a href="contato">
                     Contato
                 </a>
             </li>
         </ul>
     </nav>
     <main id="conteudo">
-        <h1>O que √© o Better Glauco</h1>
-        <p>Better Glauco √© um sistema para controle de or√ßamento dom√©stico e de investimentos de pessoas f√≠sicas.</p>
-        <p>Visamos propiciar uma vis√£o a longo prazo das finan√ßas pessoais, ajudar as pessoas a sa√≠rem das d√≠vidas e passarem a investir para obter renda ou atingir objetivos de longo prazo.</p>
-        <p>Realizamos uma consolida√ß√£o dos investimentos pessoais, focando no desempenho e balanceamento da carteira. Tamb√©m disponibilizamos um controle de or√ßamento dom√©stico pr√°tico e poderoso para analisar os dados, auxiliando o usu√°rio a destinar parte da renda aos aportes nos investimentos.</p>
-        <p>No controle de investimentos, inicialmente a base te√≥rica ser√° a divis√£o dos ativos em caixas (renda fixa, vari√°vel, reserva de emerg√™ncia etc.), m√©todo da <a href="https://invistaspiti.com.br">Luciana Seabra da casa de an√°lises Spiti</a>, baseada nas pr√°ticas dos principais alocadores de recursos em atividade.</p>
-        <p>√â poss√≠vel no cen√°rio futuro de open banking obter integra√ß√µes que aprimorem a privacidade do usu√°rio, o que pode permitir a disponibiliza√ß√£o de um perfil em que o usu√°rio forne√ßa mais informa√ß√µes pessoais em troca de uma maior integra√ß√£o com os sistemas, sincronizando dados automaticamente.</p>    
+        <h1>O que È o Better Glauco</h1>
+        <p>Better Glauco È um sistema para controle de orÁamento domÈstico e de investimentos de pessoas fÌsicas.</p>
+        <p>Visamos propiciar uma vis„o a longo prazo das finanÁas pessoais, ajudar as pessoas a saÌrem das dÌvidas e passarem a investir para obter renda ou atingir objetivos de longo prazo.</p>
+        <p>Realizamos uma consolidaÁ„o dos investimentos pessoais, focando no desempenho e balanceamento da carteira. TambÈm disponibilizamos um controle de orÁamento domÈstico pr·tico e poderoso para analisar os dados, auxiliando o usu·rio a destinar parte da renda aos aportes nos investimentos.</p>
+        <p>No controle de investimentos, inicialmente a base teÛrica ser· a divis„o dos ativos em caixas (renda fixa, vari·vel, reserva de emergÍncia etc.), mÈtodo da <a href="https://invistaspiti.com.br">Luciana Seabra da casa de an·lises Spiti</a>, baseada nas pr·ticas dos principais alocadores de recursos em atividade.</p>
+        <p>… possÌvel no cen·rio futuro de open banking obter integraÁıes que aprimorem a privacidade do usu·rio, o que pode permitir a disponibilizaÁ„o de um perfil em que o usu·rio forneÁa mais informaÁıes pessoais em troca de uma maior integraÁ„o com os sistemas, sincronizando dados automaticamente.</p>    
             
 
     </main>
@@ -60,7 +42,7 @@
         <p>2021: <a href="https://creativecommons.org/licenses/by-nc/4.0/deed.pt_BR">CC BY-NC 4.0</a></p>
     </footer>
 
-    <!--Javascript √°rea -->
+    <!--Javascript ·rea -->
     <!-- JavaScript Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj"
