--- a/src/main/resources/templates/menu-area-aberta.html
+++ b/src/main/resources/templates/menu-area-aberta.html
@@ -1,23 +1,13 @@
-    <header id="headerInicial">
-        <img id="logoInicio" src="_imagens/logo_color.svg" alt="Logo better glauco">
-        <p class="marcaInicio">Better Glauco</p>
-    </header>
-    <nav id="menuSuperior">
-        <ul>
-            <li>
-                <a href="sobre">
-                    Quem somos
-                </a>
-            </li>
-            <li>
-                <a href="/">
-                    Entrar
-                </a>
-            </li>
-            <li>
-                <a href="contato">
-                    Contato
-                </a>
-            </li>
-        </ul>
-    </nav>
+
+<header id="headerInicial">
+	<img id="logoInicio" src="_imagens/logo_color.svg"
+		alt="Logo better glauco">
+	<p class="marcaInicio">Better Glauco</p>
+</header>
+<nav id="menuSuperior">
+	<ul>
+		<li><a href="sobre"> Quem somos </a></li>
+		<li><a href="/"> Entrar </a></li>
+		<li><a href="contato"> Contato </a></li>
+	</ul>
+</nav>
