--- a/src/main/resources/templates/menu-area-logada.html
+++ b/src/main/resources/templates/menu-area-logada.html
@@ -6,17 +6,15 @@
 <nav>
 	<ul>
 		<li><a href="interno"> Investimentos </a></li>
-		<li>Orçamento</li>
+		<li>OrÃ§amento</li>
 	</ul>
 </nav>
 <section id="controles">
 
-	<a href="/"> 
-		<img src="_imagens/icones/fechar.svg" class="img-fluid" alt="Fechar">
-	</a> 
-		<img src="_imagens/icones/ajuda.svg" class="img-fluid"
-		alt="Ajuda"> 
-	<a href="/config"> 	
-		<img src="_imagens/icones/configurar.svg" class="img-fluid" alt="Configurações">
-	</a> 	
+	<a href="/"> <img src="_imagens/icones/fechar.svg"
+		class="img-fluid" alt="Fechar">
+	</a> <img src="_imagens/icones/ajuda.svg" class="img-fluid" alt="Ajuda">
+	<a href="/config"> <img src="_imagens/icones/configurar.svg"
+		class="img-fluid" alt="Configuraï¿½ï¿½es">
+	</a>
 </section>
