--- a/src/main/resources/templates/configuracoes/instituicaoFinanceira/lista-instituicoes.html
+++ b/src/main/resources/templates/configuracoes/instituicaoFinanceira/lista-instituicoes.html
@@ -12,51 +12,36 @@
 	</section>
 	<main>
 		<section id="conteudo">
-			<h1>Caixas de investimento</h1>
+			<h1>Cadastro de instituições Financeiras</h1>
 
 
 			<table class="table table-hover  table-striped">
 				<thead>
 					<tr>
-						<th scope="col">Caixa</th>
-						<th scope="col" class="numero">Alocação teórica</th>
-						<th scope="col" class="numero">Percentual alocação teórica</th>
+						<th scope="col">Nome da instituição</th>
 						<th scope="col"></th>
 						<th scope="col"></th>
 					</tr>
 				</thead>
 				<tbody>
-					<tr th:each="caixa: ${listaCaixas}">
-						<th scope="row"><span th:text="${caixa.nome}"></span></th>
-						<td class="numero"><span
-							th:text="${#numbers.formatDecimal(caixa.alocacaoTeorica,1,'POINT',2,'COMMA')}"></span></td>
-						<td class="numero"><span
-							th:text="${#numbers.formatDecimal(caixa.percentualAlocacaoTeorica,1,'POINT',2,'COMMA')}"></span></td>
+					<tr th:each="instituicao: ${listaInstituicoes}">
+						<th scope="row"><span th:text="${instituicao.nome}"></span></th>
 						<td><a
-							th:href="${(#mvc.url('CC#deletarCaixa').arg(0, caixa.id)).build()}"
+							th:href="${(#mvc.url('IFC#deletarInstituicao').arg(0, instituicao.id)).build()}"
 							class="waves-effect waves-light btn-small"><button
 									type="button" class="btn btn-danger">Excluir</button></a></td>
 						<td><a
-							th:href="${(#mvc.url('CC#editarCaixa').arg(0, caixa.id)).build()}"><button
+							th:href="${(#mvc.url('IFC#editarInstituicao').arg(0, instituicao.id)).build()}"><button
 									type="button" class="btn btn-primary">Editar</button></a></td>
 					</tr>
 				</tbody>
-				<tfoot>
-					<th>Total:
-					</td>
-					<td></td>
-					<td class="numero"><span
-						th:text="${#numbers.formatDecimal(#aggregates.sum(listaCaixas.![percentualAlocacaoTeorica]),1,'POINT',2,'COMMA')}"></span></td>
-					<td></td>
-					<td></td>
-				</tfoot>
 			</table>
 
 			<p>
-				<a href="config-nova-caixa">
+				<a href="config-nova-instituicao">
 					<button
 						class="btn btn-primary btn-block fa-lg gradient-custom-2 mb-3"
-						type="button">Nova caixa</button>
+						type="button">Nova instituição</button>
 				</a> <a href="config">
 					<button
 						class="btn btn-primary btn-block fa-lg gradient-custom-2 mb-3"
