--- a/src/main/resources/templates/contato.html
+++ b/src/main/resources/templates/contato.html
@@ -7,64 +7,66 @@
 <body class="interfacePublic">
 
 	<th:block th:include="menu-area-aberta"></th:block>
-    
-    <main id="conteudo">
-        <h1>Contato</h1>
-        <form class="row g-3 needs-validation" novalidate>
-            <div class="col-md-4">
-              <label for="validationCustom01" class="form-label">Nome</label>
-              <input type="text" class="form-control" id="contatoNome" required>
-              <div class="valid-feedback">
-                Ok
-              </div>
-            </div>
-            <div class="col-md-4">
-              <label for="validationCustom02" class="form-label">Sobrenome</label>
-              <input type="text" class="form-control" id="contatoSobrenome" required>
-              <div class="valid-feedback">
-                Ok
-              </div>
-            </div>
-            <div class="col-md-6">
-              <label for="validationContatoCidade" class="form-label">Cidade</label>
-              <input type="text" class="form-control" id="contatoCidade" required>
-            </div>
-            <div class="col-md-4">
-                <label for="validationCustomUsername" class="form-label">Usu·rio</label>
-                <div class="input-group has-validation">
-                  <span class="input-group-text" id="inputGroupPrepend">@</span>
-                  <input type="text" class="form-control" id="contatoUsuario" aria-describedby="inputGroupPrepend" >
-                </div>
-              </div>
-            <label for="validationCustom03" class="form-label">E-mail</label><br/>
-            <div class="input-group mb-3">
-                <input type="text" class="form-control" placeholder="usu·rio" aria-label="Username">
-                <span class="input-group-text">@</span>
-                <input type="text" class="form-control" placeholder="servidor" aria-label="Server">
-            </div>
-            <div class="col-12">
-                <label for="validationMensagem" class="form-label">Mensagem</label>
-                <input type="text" class="form-control" id="mensagem" required>
-                <div class="valid-feedback">
-                    Informe a mensagem
-                  </div>
-            </div>  
-            <div class="col-12">
-              <button class="btn btn-primary" type="submit">Submit form</button>
-            </div>
-          </form>   
-            
 
-    </main>
-    <footer>
-        <p>2021: <a href="https://creativecommons.org/licenses/by-nc/4.0/deed.pt_BR">CC BY-NC 4.0</a></p>
-    </footer>
+	<main id="conteudo">
+		<h1>Contato</h1>
+		<form class="row g-3 needs-validation" novalidate>
+			<div class="col-md-4">
+				<label for="validationCustom01" class="form-label">Nome</label> <input
+					type="text" class="form-control" id="contatoNome" required>
+				<div class="valid-feedback">Ok</div>
+			</div>
+			<div class="col-md-4">
+				<label for="validationCustom02" class="form-label">Sobrenome</label>
+				<input type="text" class="form-control" id="contatoSobrenome"
+					required>
+				<div class="valid-feedback">Ok</div>
+			</div>
+			<div class="col-md-6">
+				<label for="validationContatoCidade" class="form-label">Cidade</label>
+				<input type="text" class="form-control" id="contatoCidade" required>
+			</div>
+			<div class="col-md-4">
+				<label for="validationCustomUsername" class="form-label">Usu√°rio</label>
+				<div class="input-group has-validation">
+					<span class="input-group-text" id="inputGroupPrepend">@</span> <input
+						type="text" class="form-control" id="contatoUsuario"
+						aria-describedby="inputGroupPrepend">
+				</div>
+			</div>
+			<label for="validationCustom03" class="form-label">E-mail</label><br />
+			<div class="input-group mb-3">
+				<input type="text" class="form-control" placeholder="usu√°rio"
+					aria-label="Username"> <span class="input-group-text">@</span>
+				<input type="text" class="form-control" placeholder="servidor"
+					aria-label="Server">
+			</div>
+			<div class="col-12">
+				<label for="validationMensagem" class="form-label">Mensagem</label>
+				<input type="text" class="form-control" id="mensagem" required>
+				<div class="valid-feedback">Informe a mensagem</div>
+			</div>
+			<div class="col-12">
+				<button class="btn btn-primary" type="submit">Enviar</button>
+			</div>
+		</form>
 
-    <!--Javascript ·rea -->
-    <!-- JavaScript Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj"
-        crossorigin="anonymous"></script>
+
+	</main>
+	<footer>
+		<p>
+			2021: <a
+				href="https://creativecommons.org/licenses/by-nc/4.0/deed.pt_BR">CC
+				BY-NC 4.0</a>
+		</p>
+	</footer>
+
+	<!--Javascript ÔøΩrea -->
+	<!-- JavaScript Bundle with Popper -->
+	<script
+		src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"
+		integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj"
+		crossorigin="anonymous"></script>
 </body>
 
 </html>
