--- a/src/main/resources/templates/configuracoes/tipoAtivo/form-tipo-ativo.html
+++ b/src/main/resources/templates/configuracoes/tipoAtivo/form-tipo-ativo.html
@@ -11,7 +11,7 @@
 	</section>
 	<main>
 		<section id="conteudo">
-			<h1>Nova caixa de investimento</h1>
+			<h1>Novo tipo de ativo</h1>
 
 
 			<th:block th:include="mensagem-validacao"></th:block>
@@ -19,26 +19,24 @@
 			<form class="row g-3" method="post">
 
 				<div class="col-md-4">
-					<label for="nome" class="form-label">Nome da caixa</label> <input
+					<label for="nome" class="form-label">Tipo ativo</label> <input
 						type="text" class="form-control" name="nome" required>
 				</div>
-				<div class="col-md-8"></div>
 				<div class="col-md-3">
-					<label for="alocacaoTeorica" class="form-label">Alocação
-						teórica(R$)</label> <input type="number" step=".01" class="form-control"
-						name="alocacaoTeorica" required>
+					<label for="sigla" class="form-label">Sigla</label> <input type="text"
+						class="form-control" name="sigla" required>
 				</div>
 				<div class="col-md-3">
 					<label for="percentualAlocacaoTeorica" class="form-label">Percentual
 						alocação teórica(%)</label> <input type="number" step=".01"
 						class="form-control" name="percentualAlocacaoTeorica" required>
 				</div>
-				<div class="col-md-6"></div>
+				<div class="col-md-2"></div>
 				<div class="col-md-6">
 					<button class="btn btn-primary" type="submit">Cadastrar</button>
 				</div>
 				<div class="col-md-6">
-					<a href="config-caixas">
+					<a href="config-tipo-ativo">
 						<button class="btn btn-primary" type="button">Voltar</button>
 					</a>
 				</div>
