Implantação CRUD Ativos
Implantação do cadastro de ativos

--- a/src/main/resources/templates/configuracoes/configuracoes.html
+++ b/src/main/resources/templates/configuracoes/configuracoes.html
@@ -55,6 +55,11 @@
 									th:href="${(#mvc.url('TAC#editarTipoAtivo').arg(0, tipoAtivo.id)).build()}"><span
 										th:text="${tipoAtivo.nome}"></span></a> - em <i>tipos de ativo.</i></td>
 							</tr>
+							<tr th:each="ativo : ${ativosLocalizados}">
+								<td><a
+									th:href="${(#mvc.url('AC#editarAtivo').arg(0, ativo.id)).build()}"><span
+										th:text="${ativo.nome}"></span></a> - em <i> ativos.</i></td>
+							</tr>
 						</tbody>
 					</table>
 				</div>
@@ -85,6 +90,14 @@
 					<h6 class="card-subtitle mb-2 text-muted">Cadastro das classes de ativos</h6>
 					<p class="card-text">Configurar as classes de ativos, como FII, ações, fundos, etc.</p>
 					<a href="/config-tipo-ativo" class="card-link">Configurar</a>
+				</div>
+			</div>
+			<div class="card col-md-4" style="width: 18rem;">
+				<div class="card-body">
+					<h5 class="card-title">Ativos</h5>
+					<h6 class="card-subtitle mb-2 text-muted">Cadastro dos investimentos</h6>
+					<p class="card-text">Cadastrar os investimentos realizados</p>
+					<a href="/config-ativo" class="card-link">Configurar</a>
 				</div>
 			</div>
 		</section>
