--- a/src/main/resources/templates/area-logada/atualiza-investimentos.html
+++ b/src/main/resources/templates/area-logada/atualiza-investimentos.html
@@ -27,7 +27,7 @@
 						class="form-control" name="sigla" required>
 				</div>
 				<div class="col-md-3">
-					<label for="cnpj" class="form-label">CNPJ</label> <input type="number"
+					<label for="sigla" class="form-label">CNPJ</label> <input type="text"
 						class="form-control" name="cnpj" value="0">
 				</div>
 				<div class="col-md-3">
@@ -67,18 +67,6 @@
 	 					</option>
 					</select>
 				</div>
-				<div class="col-md-4">
-					<label for="nome" class="form-label">Data</label> <input
-						type="date" class="form-control" name="data" required>
-				</div>
-				<div class="col-md-4">
-					<label for="valorInvestido" class="form-label">valor investido</label> 
-					<input type="number" step=".01"
-						class="form-control" name="valorInvestido" value="0" required>
-				</div>
-				<div class="col-md-4">
-				</div>
-				
 				<div class="col-md-6">
 					<button class="btn btn-primary" type="submit">Cadastrar</button>
 				</div>
