--- a/src/main/resources/templates/menu-area-logada.html
+++ b/src/main/resources/templates/menu-area-logada.html
@@ -5,8 +5,10 @@
 </header>
 <nav>
 	<ul>
-		<li><a href="interno"> Investimentos </a></li>
-		<li>Orçamento</li>
+		<li> Investimentos: </li>
+		<li></li>
+		<li><a href="atualizar-investimentos"> Atualização </a></li>
+		<li><a href="interno"> Painel </a></li>
 	</ul>
 </nav>
 <section id="controles">
