--- a/src/main/resources/templates/area-logada/area-logada.html
+++ b/src/main/resources/templates/area-logada/area-logada.html
@@ -68,11 +68,8 @@
 					</tr>
 				</thead>
 				<tbody>
-					<tr th:each="posicaoAtivo: ${listaAtivos}">
-						<th scope="row" >
-							<span th:text="${posicaoAtivo.data}"></span>
-						</th>
-						
+					<tr >
+						<th scope="row" > jul/2021 </th>	
 						<td>0,00</td>
 						<td>0,00</td>
 						<td>0,00</td>
